force-app/main/default/objects/SCC_Queuetrans__c/SCC_Queuetrans__c.object-meta.xml
<CustomObject>
    <label>SCC Queuetrans</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCC Queuetrans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>