force-app/main/default/objects/SCC_Queuetrans__c/fields/amt_debet_2__c.field-meta.xml
<CustomField>
    <fullName>amt_debet_2__c</fullName>
    <formula>VALUE( scc_amt_debet2__c )</formula>
    <label>amt debet 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>