force-app/main/default/objects/SCC_Queuetrans__c/fields/amt_kredit_1__c.field-meta.xml
<CustomField>
    <fullName>amt_kredit_1__c</fullName>
    <formula>VALUE(scc_amt_kredit1__c )</formula>
    <label>amt kredit 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>