force-app/main/default/objects/SCC_Queuetrans__c/fields/Branchcode__c.field-meta.xml
<CustomField>
    <fullName>Branchcode__c</fullName>
    <formula>SCC_Case__r.Terminal_ID__r.SCC_Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branchcode</label>
    <type>Text</type>
</CustomField>