force-app/main/default/objects/SCC_Queuetrans__c/fields/Channel_Topup__c.field-meta.xml
<CustomField>
    <fullName>Channel_Topup__c</fullName>
    <formula>IF(scc_calltype__c = &apos;8713&apos;, SCC_Case__r.SCC_Call_Type_Feature__r.Fitur_ID__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Topup</label>
    <type>Text</type>
</CustomField>