force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_acct_debet2__c.field-meta.xml
<CustomField>
    <fullName>scc_acct_debet2__c</fullName>
    <label>acct_debet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>