force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_acct_debet3__c.field-meta.xml
<CustomField>
    <fullName>scc_acct_debet3__c</fullName>
    <label>acct_debet3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>