force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_acct_kredit3__c.field-meta.xml
<CustomField>
    <fullName>scc_acct_kredit3__c</fullName>
    <label>acct_kredit3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>