force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_amt_debet1__c.field-meta.xml
<CustomField>
    <fullName>scc_amt_debet1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>amt_debet1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>