force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_amt_kredit1__c.field-meta.xml
<CustomField>
    <fullName>scc_amt_kredit1__c</fullName>
    <label>amt_kredit1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>