force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_amt_kredit2__c.field-meta.xml
<CustomField>
    <fullName>scc_amt_kredit2__c</fullName>
    <label>amt_kredit2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>