force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_branchcode__c.field-meta.xml
<CustomField>
    <fullName>scc_branchcode__c</fullName>
    <defaultValue>&apos;CHMS&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>branchcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>