force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_calltype__c.field-meta.xml
<CustomField>
    <fullName>scc_calltype__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>calltype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>