force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_fitur_id__c.field-meta.xml
<CustomField>
    <fullName>scc_fitur_id__c</fullName>
    <label>fitur_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>