force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_no_tt__c.field-meta.xml
<CustomField>
    <fullName>scc_no_tt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>no_tt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>