force-app/main/default/objects/SCC_Queuetrans__c/fields/SCC_Remark__c.field-meta.xml
<CustomField>
    <fullName>SCC_Remark__c</fullName>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>