force-app/main/default/objects/SCC_Queuetrans__c/fields/SCC_Status__c.field-meta.xml
<CustomField>
    <fullName>SCC_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>