force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_terminal_id__c.field-meta.xml
<CustomField>
    <fullName>scc_terminal_id__c</fullName>
    <label>terminal_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>