force-app/main/default/objects/SCC_Queuetrans__c/fields/scc_trx_date__c.field-meta.xml
<CustomField>
    <fullName>scc_trx_date__c</fullName>
    <label>trx_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>